[package]
name = "mio"
version = "0.1.0"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"
keywords = ["hal","pump","valve","ndir","airflow","xysystem", "humidity", "pressure"]
categories = [""]

license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lar-rs/mio"


[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lar-rs/mio", branch = "master"}

[build-dependencies]
autocfg = "0.1"
cfg-if = "0.1.10"


[dependencies]
## cli|args
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
# clap-verbosity-flag = "0.3.0"
crossterm = "0.13.3"


log = "0.4.8"
femme = "1.3.0"
failure = "0.1.6"
run_script = "0.3.2"
dirs = "2.0.2"
ctrlc = "3.1.3"
lazy_static = "1.4.0"
flame = "0.2.2"
# crossbeam = "0.7.3"
# embedded-hal = { version = "0.2.3", features = ["unproven"] }
# nb = "0.1.2"
# Serialize
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.5.5"
# html-index = "0.2.0"
# is_executable = "0.1.2"
notify = "4.0.14"

# OS Linux
sysinfo = "0.10.2"
human-panic = "1.0.1"
# dbus="0.7.1"
# path-table="1.0.0"
# heapless = "0.5.1"
# generic-array = "0.13.2"
# gregor = "0.3.3"
# bitflags = "1.2.1"
# rppal = "*"
# void = { version = "1.0.2" }
# Async optional ?
# async-std  = { version = "1.2.0", features = ["unstable"] }
# async-log  = "2.0.0"
# futures-preview = {version = "0.3.0-alpha.19", features = ["async-await"], optional = true }
# async-trait = "0.1.19"

# [dev-dependencies]
# embedded-hal-mock = "0.7.0"
